Thu Apr 12 19:59:13 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Fix nasty function casting for argument to
	  qsort - it's (at least technically) not portable.

Thu Apr 12 17:47:47 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Fix GCC version test to only turn on
	  -fvisibility=hidden for GCC >= 4.

Thu Apr 12 16:47:56 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_btreebase.h,backends/flint/flint_cursor.h,
	  backends/flint/flint_table.h,backends/quartz/,common/,configure.ac,
	  generate-exceptions.in,include/Makefile.mk,include/xapian.h,
	  include/xapian/: Add visibility annotations to the library, which
	  when using GCC >= 4 reduces the size and load time of the library
	  and increase the runtime speed a little.  Under x86_64, the stripped
	  library is 6.4% smaller (1.5% smaller with debug information).

Thu Apr 12 16:45:57 BST 2007  Olly Betts <olly@survex.com>

	* api/version.cc: Add missing "#include <config.h>".

Thu Apr 12 13:41:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/quartztest.cc: Put removedir() function back for now to fix
	  build.

Thu Apr 12 13:02:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/progclient.cc: Some (but not all) versions of MSVC need
	  "#include <io.h>" to get the _open_osfhandle identifier.  Add it.

Thu Apr 12 12:00:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/remote/net_postlist.cc: Include config.h

Thu Apr 12 11:54:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/multi/multi_termlist.cc: Include config.h to get system
	  specific defines.
	* common/safesysstat.h: Change signature of mkdir to take mode_t
	  instead of int, to match unixy definition.

Thu Apr 12 10:19:49 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Probe for mode_t.

Thu Apr 12 01:10:18 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: Move BitReader class inside